maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:92: error: not found: value yn
      yn = -1;
      ^ShortestPathMaze:96: error: not found: value yn
      yn = 1;
      ^ShortestPathMaze:100: error: not found: value yn
      yn = 0;
      ^ShortestPathMaze:102: error: not found: value casAccess
      if (hasLeftWall(x, y)) casAccess = false;
                             ^ShortestPathMaze:104: error: not found: value yn
      yn = 0;
      ^ShortestPathMaze:107: error: not found: value yn
  return (xn, yn, canAccess);
              ^ShortestPathMaze:111: error: not found: value getNeihborRelativePos
  var (xn, yn, canAccess) = getNeihborRelativePos(x, y, np);
                            ^ShortestPathMaze:112: error: value unary_! is not a member of Any
  if (!canAccess) return min;
      ^ShortestPathMaze:114: error: overloaded method value + with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Any)
  var indication = getIndicationSafe(x + xn, y + yn);
                                       ^ShortestPathMaze:114: error: overloaded method value + with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Any)
  var indication = getIndicationSafe(x + xn, y + yn);
                                               ^